UserControllerTest: add tests for current methods